--- a/app/globals.css
+++ b/app/globals.css
@@ -115,9 +115,10 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 scroll-smooth;
   }
   body {
     @apply bg-background text-foreground;
+    /* smooth */
   }
 }
