--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-roboto-sans);
   --font-mono: var(--font-roboto-mono);
-  --font-great-vibes: var(--font-great-vibes);
+  --font-playfair: var(--font-playfair);
+  --font-manrope: var(--font-manrope);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
